Reserve place for error messeage on regsister page to avoid page jump

--- a/static/styles.css
+++ b/static/styles.css
@@ -113,7 +113,7 @@ button:hover {
   border: 1px solid var(--dark-primary);
 }
 
-.stack * + * {
+.stack > * + * {
   margin-top: 1rem;
 }
 
